--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,9 @@
+
+ body{
+    background-color:gray;
+}
 .caja {
-    border: 5px solid gray;
+    border: 5px solid thistle;
     background-color:rebeccapurple;
     margin: 1rem;
     padding: 1rem;
@@ -7,8 +11,8 @@
 }
 
 .dados {
-    width: 200px;
-    height: 160px;
+    width: 120px;
+    height: 120px;
 }
  .textDado{
     color: aquamarine;
@@ -16,3 +20,26 @@
     font-style: unset;
     text-align: center;
  }
+  .tinki{
+    color: black;
+    font-size: 30px;
+    font-style: unset;
+    text-align: left;
+  }
+  .imgMapa{
+    border: 5px solid gray;
+  }
+  .caja1 {
+    border: 5px solid gray;
+    background-color:thistle ;
+    margin: 1rem;
+    padding: 1rem;
+    display: inline-block;
+}
+.textImagen {
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 30px;
+    font-style: unset;
+    text-align: center;
+}
