--- a/estilo.css
+++ b/estilo.css
@@ -11,8 +11,8 @@
 }
 
 .dados {
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 100px;
 }
  .textDado{
     color: aquamarine;
@@ -45,4 +45,10 @@
     font-size: 20px;
     font-style: unset;
     text-align: center;
+}
+#btn1{
+    font-size: 20px;
+    border: 5px solid cornflowerblue;
+    background-color:thistle ;
+    margin: 1rem;
 }
