--- a/estilo.css
+++ b/estilo.css
@@ -5,14 +5,14 @@
 .caja {
     border: 5px solid thistle;
     background-color:rebeccapurple;
-    margin: 1rem;
-    padding: 1rem;
+    margin: 0.5rem;
+    padding: 0.2rem;
     display: inline-block;
 }
 
 .dados {
     width: 150px;
-    height: 100px;
+    height: 80px;
 }
  .textDado{
     color: aquamarine;
@@ -22,8 +22,9 @@
  }
   .tinki{
     color: black;
-    margin: 1rem;
-    font-size: 25px;
+    font-family: cursive;
+    margin: 0.5rem;
+    font-size: 20px;
     font-style: unset;
     text-align: left;
   }
@@ -35,7 +36,7 @@
   .caja1 {
     border: 5px solid gray;
     background-color:thistle ;
-    margin: 1rem;
+    margin: 0.5rem;
     padding: 0.5rem;
     display: inline-block;
 }
@@ -50,9 +51,9 @@
     font-size: 20px;
     border: 5px solid cornflowerblue;
     background-color:thistle ;
-    margin: 1rem;
+    margin: 0.5rem;
 }
 #imgPer{
-  width: 9%;
-  height: 9%;
+  width: 50px;
+  height: 50px;
 }
