--- a/estilo.css
+++ b/estilo.css
@@ -11,28 +11,21 @@
 }
 
 .dados {
-    width: 150px;
-    height: 80px;
+    width: 120px;
+    height: 70px;
 }
  .textDado{
     color: aquamarine;
-    font-size: 20px;
+    font-size: 15px;
     font-style: unset;
     text-align: center;
- }
-  .tinki{
-    color: black;
-    font-family: cursive;
-    margin: 0.5rem;
-    font-size: 20px;
-    font-style: unset;
-    text-align: left;
-  }
-  .imgMapa{
+}
+ 
+ .imgMapa{
     border: 5px solid gray;
     width: 300px;
     height: 450px;
-  }
+ }
   .caja1 {
     border: 5px solid gray;
     background-color:thistle ;
@@ -43,12 +36,12 @@
 .textImagen {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    font-size: 20px;
+    font-size: 17px;
     font-style: unset;
     text-align: center;
 }
 #btn1{
-    font-size: 20px;
+    font-size: 15px;
     border: 5px solid cornflowerblue;
     background-color:thistle ;
     margin: 0.5rem;
@@ -56,4 +49,7 @@
 #imgPer{
   width: 50px;
   height: 50px;
+  position: absolute;
+  top: 400px;
+  left: 285px;
 }
