--- a/estilo.css
+++ b/estilo.css
@@ -58,8 +58,8 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  top: 550px;
-  left: 285px;
+  top: 990px;
+  left: 270px;
 }
 
 .otroContenedor{
@@ -80,13 +80,16 @@
     color: white;
     font-size: 15px;
     font-family: cursive;
-    margin: 10px;
+    margin: 5px;
   }
   
   .reloj {
-    margin: 2px;
     float: left;
     font-size: 35px;
     font-family: Courier, sans-serif;
     color: yellowgreen;
+  }
+  #contenedorJugadores{
+    margin-left: 5px;
+    color: aliceblue;
   }
