--- a/estilo.css
+++ b/estilo.css
@@ -44,10 +44,10 @@
     text-align: center;
 }
 #btn1{
-    font-size: 10px;
+    font-size: 15px;
     border: 5px solid cornflowerblue;
     background-color:thistle ;
-    margin: 2px;
+    margin: 5px;
 }
 #botonAgregar{
   font-size: 15px;
@@ -58,9 +58,6 @@
 #imgPer{
   width: 50px;
   height: 50px;
-  position: absolute;
-  top: 990px;
-  left: 270px;
 }
 
 .otroContenedor{
@@ -93,7 +90,26 @@
     font-family: Courier, sans-serif;
     color: yellowgreen;
   }
+
+  #contenedor1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   #contenedorJugadores{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-left: 5px;
     color: aliceblue;
+  }
+
+  .form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
   }
