--- a/estilo.css
+++ b/estilo.css
@@ -116,3 +116,9 @@
     align-items: center;
     justify-items: center;
   }
+  #listado
+  {
+    font-style: italic;
+    font-size: 14px;
+    color: azure;
+  }
