--- a/estilo.css
+++ b/estilo.css
@@ -116,9 +116,13 @@
     align-items: center;
     justify-items: center;
   }
-  #listado
-  {
+
+  #listado{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-style: italic;
-    font-size: 14px;
+    font-size: 15px;
     color: azure;
   }
